refactor : 로또 범위 테스트 parameterizedTest 로 변경